# src/controllers/middleWare.ts
@@ -6,61 +6,71 @@ import env from "../../env";
 import AppError from "./AppError";
 import { UNAUTHORIZED } from "./errorController";
 
+const isValidToken = (obj: unknown): obj is { id: string } & jwt.JwtPayload =>
+	obj !== null && typeof obj == "object" && "id" in obj;
+
+// const hasExpired = (xp:number)=> new Date()
+
 export const secureRoute = async (
 	req: Request,
 	res: Response,
 	next: NextFunction
 ) => {
-	const isValid = bearerTokenSchema.safeParse(req.headers.authorization);
-
-	if (!isValid.success)
-		throw new AppError("Invalid API key", UNAUTHORIZED.code);
-
-	const providedToken = isValid.data.split(" ")?.[1]?.trim();
-
-	if (!providedToken) throw new AppError("Invalid API key", UNAUTHORIZED.code);
-
-	let id = "";
-
 	try {
-		id = jwt.verify(providedToken, env.HASH_SECRET) as string;
-	} catch (error: any) {
-		throw new AppError("Invalid API key", UNAUTHORIZED.code, error);
-	}
+		const isValid = bearerTokenSchema.safeParse(req.headers.authorization);
 
-	const user = await prisma.user.findUnique({
-		where: { id },
-		select: {
-			id: true,
-			email: true,
-			username: true,
-			profile_photo: true,
-			cover_photo: true,
-			level: true,
-			notifications: true,
-			enrolled_courses: {
-				select: {
-					course: {
-						select: {
-							id: true,
-							title: true,
-							reviews: true,
-							_count: { select: { enrollement: {}, reviews: {} } },
-							profile_photo: true,
+		if (!isValid.success)
+			throw new AppError("Please provide an API key", UNAUTHORIZED.code);
+
+		const providedToken = isValid.data.split(" ")?.[1]?.trim();
+
+		if (!providedToken)
+			throw new AppError("Invalid API key", UNAUTHORIZED.code);
+
+		const veriedToken: unknown = jwt.verify(providedToken, env.HASH_SECRET);
+
+		if (!isValidToken(veriedToken))
+			throw new AppError("Invalid API key", UNAUTHORIZED.code);
+
+		const { id, exp } = veriedToken;
+		return res.json({ veriedToken });
+
+		const user = await prisma.user.findUnique({
+			where: { id },
+			select: {
+				id: true,
+				email: true,
+				username: true,
+				profile_photo: true,
+				cover_photo: true,
+				level: true,
+				notifications: true,
+				enrolled_courses: {
+					select: {
+						course: {
+							select: {
+								id: true,
+								title: true,
+								reviews: true,
+								_count: { select: { enrollement: {}, reviews: {} } },
+								profile_photo: true,
+							},
 						},
+						enrolled_at: true,
 					},
-					enrolled_at: true,
 				},
+				created_at: true,
 			},
-			created_at: true,
-		},
-	});
-	//
-	if (!user) throw new AppError("Not a user", UNAUTHORIZED.code);
+		});
+		//
+		if (!user) throw new AppError("Invalid API key", UNAUTHORIZED.code);
 
-	res.locals.user_id = user.id;
+		res.locals.user_id = user?.id;
 
-	next();
+		next();
+	} catch (err) {
+		next(err);
+	}
 };
 
 (() => {
